apps/production/ha-dev/home-assistant-stack.yaml
---
# Source: home-assistant/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2022.5.4
    helm.sh/chart: home-assistant-13.4.2
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
---
# Source: home-assistant/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2022.5.4
    helm.sh/chart: home-assistant-13.4.2
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
#      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:2026.8.3"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: null
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: http-config
              mountPath: /config/http.yaml
              subPath: http.yaml
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: http-config
          configMap:
            name: home-assistant-http-config
