apps/production/ha-dev/allow-ext-egress-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-external-egress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
  - toCIDR:
    - 192.168.0.0/16
    - 10.10.11.0/24   # Media VLAN
