apps/production/ha-dev/allow-local-egress-qbittorrent-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-local-egress-qbittorrent"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": torrent
        "app": qbittorrent
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
